[package]
name = "prunner"
version = "1.0.0"
edition = "2021"
description = "A portable alternative for the Windows Run"
build = "build.rs"

[[bin]]
name = "Prunner"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "4"
open = "3"
ico = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "shellapi",
    "winuser",
    "windef",
    "minwindef",
    "processthreadsapi",
    "winerror",
    "winreg",
    "winnt",
    "commdlg",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
